# AID-BC

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
AID_BC/: __init__.py  main.py
docs/source/: conf.py  experiments.rst  index.rst  installation.rst  overview.rst  pre_push_workflow.rst  project_structure.rst  quantile_mapping.rst  quickstart.rst  testing_philosophy.rst
docs/source/api/: AID_BC.models.rst  AID_BC.rst  modules.rst
notebooks/: BSCK_2013_2014.ipynb
src/AID_BC/: __main__.py  dataset.py  logger.py  main.py  preprocess.py  quantile_mapping.py  version.py
src/AID_BC/models/: .ot.py.swp  __init__.py  ot.py  qm.py
tests/: test_dataset.py  test_logger.py  test_preprocess.py  test_quantile_mapping.py  test_runner.py
