[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AID_BC"
version = "0.1.0"
description = "AID_BC: AI Donwscaling Bias Correction"
readme = "README.rst"
requires-python = ">=3.8"

authors = [
    {name = "Kazem Ardaneh", email = "kardaneh@ipsl.fr"}
]

license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
    "mpltex>=0.7",
    "xarray>=2023.1.0",
    "rich>=14.2.0",
    "netcdf4>=1.7.2",
    "h5netcdf>=1.1.0",
    "seaborn>=0.13.2",
    "dask>=2023.5.0",
    "zarr>=2.16.1",
]

[project.scripts]
AID_BC = "AID_BC.main:main"

[project.urls]
Source = "https://github.com/kardaneh/AID-BC"

[tool.hatch.build.targets.wheel]
packages = ["src/AID_BC"]

[tool.hatch.build]
include = [
    "src/AID_BC/**/*",
    "LICENSE",
    "README.rst",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.15.0"
]
docs = [
    "myst-parser>=3.0.1",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
